Fix text spacing and drastically improve 3D texture mapping clarity

--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -217,8 +217,9 @@
 
 .landing-info h2 {
   margin: 0;
-  margin-top: -20px;
-  margin-left: 20px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  margin-left: 0px;
   font-family: "Geist", sans-serif;
   font-weight: 600;
   font-size: 32px;
@@ -236,7 +237,7 @@
 }
 
 h2.landing-info-h2 {
-  color: #14b8a6;
+  color: #ffffff;
   font-size: 42px;
   width: 120%;
   margin: 0;
